external/lmgc90_dev-fortran_lib/src/ChiPy/contact_2D/wrap_inter_handler_2D.h

 
  extern "C" int inter_handler_2D_tgetNb(int inter_id);
  extern "C" int inter_handler_2D_tgetTactLawNb(int inter_id, int icdan);
  extern "C" void inter_handler_2D_tgetIdBodies(int inter_id, int icdan, int** i4_vector, int* i4_size);
  extern "C" void inter_handler_2D_tgetIData(int inter_id, int icdan, int ** i4_vector, int * i4_size);
  extern "C" void inter_handler_2D_tgetRData(int inter_id, int icdan, double** r8_vector, int* r8_size);
  extern "C" void inter_handler_2D_tsetInternal(int inter_id, int icdan, double * rvector_in=nullptr, int rlength_in=0, int index=0, double value=0.);
  extern "C" void inter_handler_2D_tgetInternal(int inter_id, int icdan, double ** r8_vector, int * r8_size);
  extern "C" int inter_handler_2D_getNbRecup(int inter_id);
  extern "C" int inter_handler_2D_getNb(int inter_id);
  extern "C" void inter_handler_2D_getAllTactLawNb(int inter_id, int ** i4_vector, int * i4_size);
  extern "C" void inter_handler_2D_getAll(int inter_id, double ** matrix_out, int * dim1, int * dim2);
  extern "C" void inter_handler_2D_getAllInternal(int inter_id, double ** matrix_out, int * dim1, int * dim2);
  extern "C" void inter_handler_2D_getAllIdata(int inter_id, int ** matrix_out, int * dim1, int * dim2);
  extern "C" int inter_handler_2D_getVerletAdjsz(int inter_id, int icdtac);
  extern "C" int inter_handler_2D_getVerletIantac(int inter_id, int icdtac, int iadj);
  extern "C" void inter_handler_2D_computeRnod(void);
  extern "C" void inter_handler_2D_stockRloc(int inter_id);
  extern "C" void inter_handler_2D_recupRloc(int inter_id);